<resources>
    <string name="app_name">Fidibo</string>
    <string name="txt_programing">برنامه نویسی</string>
    <string name="title_activity_show_all_book">ShowAllBookActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_text">دانلود</string>
    <string name="book_information_text">اطلاعات کتاب</string>
    <string name="publisher_text">ناشر</string>
    <string name="category_text">دسته بندی</string>
    <string name="toatal_download">تعداد دانلود</string>
    <string name="last_seen_text">آخرین بازدید ها</string>
    <string name="my_favorite_text">علاقه مندی های من</string>
    <string name="programing_text">برنامه نویسی</string>
    <string name="growUp_text">توسعه فردی</string>
    <string name="psychology_text">روانشناسی</string>
    <string name="novel_text">رمان</string>
    <string name="negotiation_text">مذاکره</string>
    <string name="ok_text">تایید</string>
    <string name="scroll_text">ورق بزنید</string>
    <string name="all_list_text">لیست کامل</string>
    <string name="search_fidibo">جستجو در فیدیبو</string>
    <string name="name_splach">BookApp</string>
    <string name="success_text">موفق</string>
    <string name="podcast_text">پادکست</string>
    <string name="all_text">همه</string>
    <string name="top_publisher">ناشران برتر</string>
    <string name="pupulare_issue">موضوعات پرطرفدار</string>
    <string name="library_text">کتابخانه</string>
    <string name="shelf_text">قفسه</string>
    <string name="all_category_text">همه دسته بندی ها</string>
    <string name="download_shelf_text">دانلود شده</string>
    <string name="book_mark_text">نشان شده</string>
    <string name="number_donload">تعداد دانلود</string>
    <string name="epub_book_text">کتاب الکترونیکی</string>
    <string name="add_new_shelf_text">ساختن قفسه جدید</string>
    <string name="special_text">ویژه</string>
    <string name="my_favorite_special_text">علاقه مندی من</string>
    <string name="choose_category">+ انتخاب دسته</string>
    <string name="description_about_special_text">با انتخاب دسته مورد علاقه تان تازه ترین های مرتبط با آن در ویترین شما چیده میشود</string>
    <string name="just_fidibo">فقط در فیدیبو !</string>
    <string name="harvard_university_text">معرفی شده دانشگاه اکسفورد</string>
    <string name="page_deatail_text">صفحه مشخصات</string>
    <string name="delete_libray">حذف از کتابخانه</string>
    <string name="create_new_shelfe_text">ایجاد قفسه جدید</string>
    <string name="what_your_issue_shelf_text">چه عنوانی به ایم قفسه میدهید ؟</string>
    <string name="issue_shelf_text">عنوان قفسه</string>
    <string name="create_shelf_btn_text">ایجاد قفسه</string>
    <string name="cancle_text_shelf">انصراف</string>
    <string name="change_yuor_text">ویرایش قفسه</string>
    <string name="delete_shelf_text">حذف قفسه</string>
</resources>